[tool.poetry]
name = "ninja-put-patch-file-upload-middleware"
version = "0.1.4"
description = "A middleware that allows user to upload files using PUT / Patch"
authors = [
    "baseplate-admin <61817579+baseplate-admin@users.noreply.github.com>",
]
license = "MIT"
readme = "README.md"
packages = [
    { include = "ninja_put_patch_file_upload_middleware", from = 'src' },
]
keywords = [
    "ninja",
    "django-ninja",
    "middlewares",
    'put',
    'patch',
    'file upload',
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/baseplate-admin/ninja_put_patch_file_upload_middleware/issues"
"homepage" = "https://github.com/baseplate-admin/ninja_put_patch_file_upload_middleware"
"repository" = "https://github.com/baseplate-admin/ninja_put_patch_file_upload_middleware"

[tool.poetry.dependencies]
python = ">=3.10"
asgiref = ">=3.6"
django-ninja = "*"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.2"
pytest-django = ">=4.8.0"
pytest-asyncio = ">=0.23.6"
django-stubs = { extras = ["compatible-mypy"], version = "^5.1.1" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = '--nomigrations'

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.demo_project.demo.settings"
